# fastapi-rag

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.assets/: История.md  Партнёры.md  Реальная_автоматизация.md  Сертификаты.md  Система_качества.md  Услуги.md
ai_business_card/: agent.py  constants.py  depends.py  documents.py  prompts.py  routers.py  schemas.py  settings.py
corp_website_ai/: agent.py  constants.py  depends.py  documents.py  prompts.py  routers.py  schemas.py  utils.py
corp_website_ai/checkpointer/: constants.py  exceptions.py  saver.py
fastapi_rag/: agent.py  app.py  broker.py  depends.py  indexing.py  rag.py  schemas.py  settings.py  websockets.py
fastapi_rag/database/: base.py  models.py  queries.py
fastapi_rag/routers/: __init__.py  chat.py  documents.py  ws.py
src/: agent.py  constants.py  schemas.py  settings.py
src/routers/: __init__.py  chat.py
src/routers/admin/: __init__.py  documents.py
website_ai/: agent.py  depends.py  routers.py
website_ai/checkpoint/: __init__.py  base.py  savers.py  utils.py
