[project]
name = "dio-ai-business-card"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "docx2md>=1.0.4",
    "fastapi[all]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-gigachat>=0.3.12",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone>=0.2.12",
    "langgraph>=0.6.7",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-redis>=0.1.1",
    "pymupdf4llm>=0.0.27",
    "redis>=6.4.0",
    "redisvl>=0.8.2",
    "sentence-transformers>=5.1.0",
]
